# tkinter-poetry-starter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CUSTOMIZATION_GUIDE.md  DEVELOPMENT.md  LICENSE  README.md  copier.yml  pyproject.toml  release.sh  tkinter_poetry_starter.spec
.github/workflows/: auto-release.yml  release.yml
src/core/: utilities.py
src/gui/: app.py
template/: .gitignore  CHANGELOG.md.jinja  DEVELOPMENT.md.jinja  README.md.jinja  pyproject.toml.jinja  {{ project_name }}.spec.jinja
template/.github/workflows/: release.yml  release.yml.jinja
template/src/core/: utilities.py
template/src/gui/: app.py.jinja
